style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

:root {
    --dark-color-1: #334f5a;
    --dark-color-2: #424242;
    --light-color-1: #00cccb;
    --light-color-2: #00adac;
    --accent-color: #ffc02b;
    --gradient-dark-color-1: linear-gradient(to right, #334f5a, #3D788F);
    --gradient-dark-color-2: linear-gradient(to right, #424242, #676767);
    --gradient-light-color-1: linear-gradient(to right, #00CCCB, #A5F6F5);
    --gradient-light-color-2: linear-gradient(to right, #00ACAB, #B0F3F2);
    --gradient-accent-color: linear-gradient(to right, #FFC02B, #F5E0AE);
    --dark-color-1-desaturated: #D6DCDE;
    --dark-color-2-desaturated: #D9D9D9;
    --light-color-1-desaturated: #CCF5F5;
    --light-color-2-desaturated: #CCEEEE;
    --accent-color-desaturated: #FFF2D5;
}


* {
    box-sizing: border-box;
}


/*! Imported from Style Guidelines !*/

h1 {
    font-family: 'Poppins', sans-serif;
    font-size: 40px;
}

h2 {
    font-family: 'Poppins', sans-serif;
    font-size: 32px;
    text-align: center;
}

h3 {
    font-family: 'Poppins', sans-serif;
    font-size: 24px;
    font-weight: 600;
    text-align: center;
}

h4 {
    font-family: 'Poppins', sans-serif;
    font-size: 20px;
}

h5 {
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    font-weight: 600;
}

h6 {
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    font-weight: 600;
}

p {
    font-family: 'Roboto', sans-serif;
    font-size: 15px;
    line-height: 25px;
    text-align: justify;
    margin: 0px;
    padding: 10px;
}

p a {
    color: var(--accent-color);
}

p strong {
    color: var(--accent-color);
    font-weight: 600;
}

p em {
    font-style: italic;
}

/*! Components !*/

button.solid-1 {
    background-color: var(--dark-color-1);
    color: #fff;
    border: none;
    padding: 10px 20px 10px 20px;
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    cursor: pointer;
}

button.solid-1:hover {
    background-color: #fff;
    border: 1px solid var(--dark-color-1);
    color: var(--dark-color-1);
    box-sizing: border-box;
}

button.solid-2 {
    background-color: var(--light-color-1);
    color: #fff;
    border: none;
    padding: 10px 20px 10px 20px;
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    cursor: pointer;
}

button.solid-2:hover {
    background-color: #fff;
    border: 1px solid var(--light-color-1);
    color: var(--light-color-1);
    box-sizing: border-box;
}

button.solid-3 {
    background-color: var(--light-color-2);
    color: #fff;
    border: none;
    padding: 10px 20px 10px 20px;
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    cursor: pointer;
}

button.solid-3:hover {
    background-color: #fff;
    border: 1px solid var(--light-color-2);
    color: var(--light-color-2);
    box-sizing: border-box;
}

button.solid-4 {
    background-color: var(--accent-color);
    color: #fff;
    border: none;
    padding: 10px 20px 10px 20px;
    font-family: 'Poppins', sans-serif;
    font-size: 15px;
    cursor: pointer;
}

button.solid-4:hover {
    background-color: #fff;
    border: 1px solid var(--accent-color);
    color: var(--accent-color);
    box-sizing: border-box;
}

/*! General !*/



strong {
    color: var(--accent-color);
}

.font-white {
    color: #fff;
}

.title {
    font-family: 'Ysabeau', sans-serif;
    font-size: 30px;
    font-weight: 600;
    padding: 0px 10px 0px 10px;
}

body {
  font-family: 'Poppins', sans-serif;
  position: relative;
  color: #333;
  background-color: #fff;
  margin: 0 auto;
  width: 60%;
}

/*! Header !*/

#page-header {
    padding: 20px 0px 20px 0px;
    position: relative;
    display: inline-block;
    width: 100%;
    height: auto;
    z-index: 2;
}

/*! Header: imagotipo !*/

#header-logo-container {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    max-width: fit-content;
    height: 50px;
    padding: 0px 10px 0px 10px;
    float: left;
}

#header-logo {
    height: 100%;
    width: auto;
}

#logo-title {
    height: 100%;
    font-size: 40px;
    line-height: 50px;
    font-weight: 600;
    padding: 0px 10px 0px 10px;
    display: inline-block;
    margin: 0px;
}

/*!Header: Navegador de páginas*/

#header-navbar {
    padding: 10px 0px 10px 0px;
    margin:0px;
    float: right;
}

.header-option {
    display: inline-block;
    padding: 5px 10px 5px 10px;
    margin: 0px 5px 0px 5px;
}

.header-option:hover {
    background-color: var(--accent-color);
    color: #fff;
    cursor: pointer;
}

/*! Body!*/

#page-body {
    background-color: #fff;
    padding: 10px 0px 10px 0px;
    position: relative;
    width: 100%;
    height: fit-content;
    z-index: 1;
}

/*! Body: Banner!*/

.banner {
    background-image: url("assets/banner.png");
    background-repeat: auto;
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: center;
    width: 100%;
    height: 400px;
}

#call-to-action-banner {
    width: 60%;
    padding: 40px;
}

#banner-button {
    background-color: var(--accent-color);
    border: none;
    color: #fff;
    font: 15px 'Poppins', sans-serif;
    padding: 10px 20px 10px 20px;
}

#banner-button:hover {
    background-color: var(--light-color-1);
    cursor: pointer;
    transition: 0.1s;
}

/*! Body: About us!*/

#about-us {
    margin: 75px 0px 75px 0px;
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
}

#about-us h1 {
    font-size: 30px;
    text-align: center;
}

#about-us div img {
    width: 40%;
    height: auto;
    margin: 20px 0px 20px 0px;
    float: left;
}

#about-us div p {
    display: inline-block;
    width: 60%;
    margin: 20px 0px 20px 0px;
    padding: 0px 20px 0px 20px;
    text-align: justify;
}

/*! Body: Services!*/

#services {
    margin: 75px 0px 75px 0px;
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
}

#students-list {
    margin: 75px 0px 75px 0px;
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
    list-style: none;
    flex-wrap: wrap;
}

#services h1 {
    font-size: 30px;
    text-align: center;
}

.student-card {
    width: 250px;
    height: auto;
    margin: 20px 0px 20px 0px;
    padding: 0px 20px 0px 20px;
    float: left;
    display: block;
}

#students-list div.student-card img.student-image {
    width: 100%;
    height: auto;
    clear: both;
    display: block;
}

#students-list .text-block {
    padding: 10px 0px 10px 0px;
    width: 100%;
}

#students-list h3 {
    font-size: 20px;
    text-align: center;
    display: block;
}

.text-block p {
    font-size: 15px;
    text-align: justify;
    display: block;
    width: 100%;
}

